# PhotoScript

./: .all-contributorsrc  .bumpversion.cfg  .coveragerc  .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  README_DEV.md  dev_requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: tests.yml
docs/: .buildinfo  README.html  README.md  genindex.html  index.html  index.md  modules.html  objects.inv  reference.html  reference.md  search.html  searchindex.js
docs/_modules/: index.html  photoscript.html
docs/_sources/: README.rst.txt  index.rst.txt  modules.rst.txt  reference.rst.txt
docs/source/: conf.py  index.rst  modules.rst  reference.rst
docsrc/: Makefile
docsrc/source/: conf.py
examples/: example.py  import_photos.py  photos_repl.py  photos_text.py
photoscript/: __init__.py  __main__.py  _version.py  exceptions.py  photoscript.applescript  photoscript.py  script_loader.py  utils.py
reference/: index.html
search/: search_index.json
tests/: README.md  applescript_test.applescript  conftest.py  create_new_test_library.py  export_photo_details.py  mock_photoscript.applescript  photoscript_config_catalina.py  photoscript_config_data.py  photoscript_config_sequoia.py  photoscript_config_tahoe.py  photoscript_config_ventura.py  test.py  test_0_interactive.py  test_1_photoslibrary.py  test_2_album.py  test_2_album.pyy  test_3_folder.py  test_4_photo.py  test_5_script_loader.py  test_6_utils.py  test_7_main.py  test_8_photoslibrary_timedout.py  test_album.py  test_photoscript.py  utils.py
tests/test_libraries/Test-PhotoScript-10.15.6.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm  Photos.sqlite-wal
tests/test_libraries/Test-PhotoScript-10.15.6.photoslibrary/database/search/: psi.sqlite  psi.sqlite-shm  psi.sqlite-wal  zeroKeywords.data
tests/test_libraries/Test-PhotoScript-10.15.6.photoslibrary/private/com.apple.Photos/: appPrivateData.plist
tests/test_libraries/Test-PhotoScript-10.15.6.photoslibrary/resources/journals/: Album-change.plj  Asset-change.plj  Asset.plist  Folder-change.plj  HistoryToken.plist
tests/test_libraries/Test-PhotoScript-10.15.7-Single-Photo.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm  Photos.sqlite-wal
tests/test_libraries/Test-PhotoScript-10.15.7-Single-Photo.photoslibrary/database/search/: psi.sqlite  psi.sqlite-shm
tests/test_libraries/Test-PhotoScript-10.15.7-Single-Photo.photoslibrary/resources/journals/: Asset-change.plj  Asset.plist  HistoryToken.plist
tests/test_libraries/Test-PhotoScript-10.15.7.photoslibrary/database/: Photos.sqlite-shm  Photos.sqlite-wal  Photos.sqlite.aside  rebuildHistory
tests/test_libraries/Test-PhotoScript-10.15.7.photoslibrary/database/search/: psi.sqlite-shm  synonymsProcess.plist
tests/test_libraries/Test-PhotoScript-10.15.7.photoslibrary/private/com.apple.photolibraryd/: assetUUIDForPath.plist
tests/test_libraries/Test-PhotoScript-10.15.7.photoslibrary/resources/journals/: HistoryToken.plist  ImportSession-change.plj
tests/test_libraries/Test-PhotoScript-13.0.1-Single-Photo.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm  Photos.sqlite-wal
tests/test_libraries/Test-PhotoScript-13.0.1-Single-Photo.photoslibrary/resources/journals/: Asset-change.plj  FetchingAlbum.plist  Folder-change.plj  HistoryToken.plist  ImportSession-change.plj  Memory.plist  MigrationHistory-change.plj  MigrationHistory.plist  ProjectAlbum.plist
tests/test_libraries/Test-PhotoScript-13.0.1.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm
tests/test_libraries/Test-PhotoScript-13.0.1.photoslibrary/database/search/: psi.sqlite
tests/test_libraries/Test-PhotoScript-15.7.1-Single-Photo.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm  Photos.sqlite-wal
tests/test_libraries/Test-PhotoScript-15.7.1.photoslibrary/database/: Photos.sqlite  Photos.sqlite-shm  Photos.sqlite-wal
(+111 files in other folders)
