[tool.poetry]
name = "photoscript"
version = "0.1.6"
description = "Python wrapper around Apple Photos applescript interface"
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyobjc-core = "^8.5.1"
pyobjc-framework-Cocoa = "^8.5.1"
pyobjc-framework-AppleScriptKit = "^8.5.1"
pyobjc-framework-AppleScriptObjC = "^8.5.1"
py-applescript = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flaky = "^3.7.0"
wheel = "^0.37.1"
build = "^0.8.0"
twine = "^4.0.1"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
