[tool.poetry]
name = "photoscript"
version = "0.1.6"
description = "Python wrapper around Apple Photos applescript interface"
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/RhetTbull/photoscript"
repository = "https://github.com/RhetTbull/photoscript"
keywords = ["photos", "mac", "macos", "applescript", "apple"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
pyobjc-core = ">=9.0,<10.0"
pyobjc-framework-Cocoa = ">=9.0,<10.0"
pyobjc-framework-AppleScriptKit = ">=9.0,<10.0"
pyobjc-framework-AppleScriptObjC = ">=9.0,<10.0"
py-applescript = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flaky = "^3.7.0"
wheel = "^0.37.1"
build = "^0.8.0"
twine = "^4.0.1"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "^0.3.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
