[project]
name = "photoscript"
version = "0.5.1"
description = "Python wrapper around Apple Photos applescript interface"
authors = [{ name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" }]
license = { text = "MIT License" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["photos", "mac", "macos", "applescript", "apple"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyobjc-core>=9.2",
    "pyobjc-framework-Cocoa>=9.2",
    "pyobjc-framework-AppleScriptKit>=9.2",
    "pyobjc-framework-AppleScriptObjC>=9.2",
    "py-applescript>=1.0.3",
    "tenacity>=8.0.1,<9.0.0",
]
requires-python = ">=3.10,<4.0"

[project.optional-dependencies]
dev = [
    "setuptools",
    "pytest>=7.1.3,<8.0",
    "flaky>=3.7.0,<4.0",
    "wheel>=0.37.1",
    "build>=0.8.0",
    "twine>=4.0.1",
    "bump2version>=1.0.1",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.13",
    "mkdocstrings-python>=0.8.3",
    "tenacity>=8.0.1,<9.0.0"
]

[project.urls]
Homepage = "https://github.com/RhetTbull/photoscript"
Repository = "https://github.com/RhetTbull/photoscript"

[tool.setuptools]
packages = ["photoscript"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
